StageComparatorGraph: Bugfix - Guides / Names - Tweaked graph guidelines alignment - Tweaked name cell size for height consistency

--- a/src/assets/styles/stages.css
+++ b/src/assets/styles/stages.css
@@ -39,15 +39,18 @@ ssbu-stage-select form > .form-group {
   padding-right: 0;
 }
 
+.table-responsive .th-sticky.name {
+  min-width: 9rem;
+}
+
 .table-responsive .abbr {
   display: none;
 }
 
 .table-responsive .td-graph {
   background-image: repeating-linear-gradient(to right,
-      transparent,
-      hsla(0, 0%, 0%, 50%) 1px,
-      transparent 0px,
+      hsla(0, 0%, 0%, 50%) 0px,
+      transparent 1px,
       transparent 20px);
   background-position-x: 1rem;
   box-shadow: inset 1rem 0 white, -.75rem 0 white;
