--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -470,7 +470,7 @@ h4 {
 }
 
 .table-responsive tbody tr {
-  height: 3rem;
+  height: 3.5rem;
 }
 
 .table-hover tbody tr:hover td,
